--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,1 +1,25 @@
-<p>login-page works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title class = "direction" >Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div>
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Email</mat-label>
+          <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
+          <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </form>
+    </div>
+  </mat-card-content>
+  <mat-card-actions class ="xyz">
+    <button mat-button>Login</button>
+    <button mat-button>SignUp</button>
+  </mat-card-actions>
+</mat-card>
