--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-<app-login-page></app-login-page>
+<app-login-page></app-login-page> 
+<!-- <app-signup-page></app-signup-page> -->
