--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -1,4 +1,4 @@
-
+<div class ="data-container">
 <div class="container">
   <div class ="row">
     <div class ="col-lg-3">
@@ -38,8 +38,13 @@
         <mat-error *ngIf="data.password.errors.pattern">Password dont match the  <Strong>Criteria</Strong></mat-error>
       </div>
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+  
+  <span class ="btn" type ="submit">Submit</span>
+
   </form>
 </div>
 </div>
 </div>
+</div> 
+
+
