--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,27 +1,27 @@
-<div class ="home">
-  <mat-card class="example-card">
-  <mat-card-header class = "direction">
+<div class ="container">
+  <mat-card-header class = "heading">
     <mat-card-title >Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div>
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
+    
+      <form class="box">
+        
           <mat-label>Email</mat-label>
+          <div>
           <input type="email" matInput [formControl]="emailFormControl" [(ngModel)]="username" placeholder="Ex. pat@example.com">
-          <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+          <p *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
             Please enter a valid email address
-          </mat-error>
+          </p>
           <mat-error *ngIf="emailFormControl.hasError('required')">
             Email is <strong>required</strong>
           </mat-error>
-        </mat-form-field>
+        </div>       
       </form>
-    </div>
-    <div>
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
+ 
+      <form class="box">
+        
           <mat-label>Password</mat-label>
+          <div>
           <input type="password" matInput [formControl]="passwordFormControl" [(ngModel)]="password" placeholder="password">
          <mat-error *ngIf="passwordFormControl.hasError('required')">
             Password is <strong>required</strong>
@@ -29,16 +29,16 @@
           <mat-error *ngIf="passwordFormControl.hasError('pattern')">
             Password doent not match<strong>creteria</strong>
           </mat-error>
-        </mat-form-field>
+        </div>
       </form>
-    </div>
+  
   </mat-card-content>
-  <div class="buttons">
-    <div class="action_btn">
-    <button mat-button class="action_btn" [disabled]="username  === '' || password ==='' ? true : false " (click)="logIn()">LogIn</button>
-    <button mat-button class="action_btn" (click)="signUp()">SignUp</button>
-    </div>
+
+      <button class ="btn" [disabled]="username  === '' || password ==='' ? true : false " (click)="logIn()">LogIn</button>
+      <p class ="text" >
+        Dont have a Account? <a href ='#'>Sign Up</a>
+      </p>     
+
 </div>
-</mat-card>
-</div> 
+
 
