--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,44 +1,38 @@
+<div class="homeImage" >
 <div class ="container">
   <mat-card-header class = "heading">
     <mat-card-title >Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    
-      <form class="box">
-        
-          <mat-label>Email</mat-label>
+    <form class="box">
+       <mat-label>Email</mat-label>
           <div>
-          <input type="email" matInput [formControl]="emailFormControl" [(ngModel)]="username" placeholder="Ex. pat@example.com">
-          <p *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-            Please enter a valid email address
-          </p>
-          <mat-error *ngIf="emailFormControl.hasError('required')">
-            Email is <strong>required</strong>
-          </mat-error>
-        </div>       
-      </form>
- 
-      <form class="box">
-        
-          <mat-label>Password</mat-label>
+            <input type="email" matInput [formControl]="emailFormControl" [(ngModel)]="username" placeholder="Ex. pat@example.com">
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                          Please Enter a Valid <strong>Email</strong> 
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                          Email is <strong>required</strong>
+              </mat-error>
+          </div>  
+    </form>
+    <form class="box">    
+      <mat-label>Password</mat-label>
           <div>
-          <input type="password" matInput [formControl]="passwordFormControl" [(ngModel)]="password" placeholder="password">
-         <mat-error *ngIf="passwordFormControl.hasError('required')">
-            Password is <strong>required</strong>
-          </mat-error>
-          <mat-error *ngIf="passwordFormControl.hasError('pattern')">
-            Password doent not match<strong>creteria</strong>
-          </mat-error>
-        </div>
-      </form>
-  
+            <input type="password" matInput [formControl]="passwordFormControl" [(ngModel)]="password" placeholder="password">
+              <mat-error *ngIf="passwordFormControl.hasError('required')">
+                          Password is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="passwordFormControl.hasError('pattern')">
+                          Password doent not match <strong>creteria</strong>
+              </mat-error>
+            </div>
+    </form>
   </mat-card-content>
-
-      <button class ="btn" [disabled]="username  === '' || password ==='' ? true : false " (click)="logIn()">LogIn</button>
+  <button class ="btn" [disabled]="username  === '' || password ==='' ? true : false " (click)="logIn()">LogIn</button>
       <p class ="text" >
-        Dont have a Account? <a href ='#'>Sign Up</a>
+            Don't have a Account? <a href ='#'>Sign Up</a>
       </p>     
-
+  </div>
 </div>
-
 
