--- a/src/app/signup-page/signup-page.component.css
+++ b/src/app/signup-page/signup-page.component.css
@@ -1,4 +1,4 @@
-.btn{
+/* .btn{
     color: #f77f2f;
     cursor: pointer;
     position: relative;
@@ -32,7 +32,7 @@
     top: -1px;
     left: -1px;
     border-top: 5px solid #f77f2f;
-    border-left: 5px solid #f77f2f;
+    border-left: 5px solid #ff6600;
 }
 
 .btn:before{
@@ -50,4 +50,115 @@
 .btn:hover:before, .btn:hover:after{
     width:104%;
     height:108%;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+.homeImage{
+  background-image: url("Y:\Swiggy\src\assets\erol-ahmed-IHL-Jbawvvo-unsplash.jpg");
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+padding-top:200px;
+} 
+
+.heading{
+  font-size:2em;
+  margin-bottom: 0.5em;
+}
+.box{
+  margin: 0.2em 0;
+}
+.container .box mat-label{
+  color :rgba(255,255, 255, 0.781);
+}
+.container .box div{
+  position: relative;
+  width: 100%;
+  height: 60px;
+  margin: 0.5em 0;
+}
+.container .box div mat-error{
+  position: relative;
+  width: 20%;
+  height: 10px;
+  margin: 0.5em 0;
+}
+
+.container .box input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(19, 19, 19);
+  color: white;
+  border: none;
+  outline: none;
+  padding-left: 0.8em;
+  border-radius: 10px;
+  transition: all 1s;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: black;
+}
+.container{
+  background:rgb(15, 15, 15);
+  width: 550px;
+  height: 700px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction:column;
+  color: white;
+  padding: 2em;
+  opacity: 0.9;
+  margin: auto;
+}
+.btn:hover{
+  transform:translate(-1%,5%);
+  box-shadow: 0 0 10px #ff416d65;
+}
+.text{
+  font-size:0.83em;
+  margin-top: 0.5em;
+  text-align: center;
+  color: rgba(255,255, 255, 0.623);
+}
+.text a{
+color: rgba(255,255, 255, 0.911);
+}
+.container .box input:focus::placeholder{
+  color: white;
+}
+.container .box div::before{
+  content :'';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+  width: 102%;
+  height: 105%;
+  border-radius: 10px;
+  background: linear-gradient(to right,#ff416c,#ff4b2b);
+}
+.btn{
+  width: 102%;
+  height: 60px;
+  border:none;
+  border-radius: 10px;
+  margin: 0.5em 0;
+  transform :translate(-1%);
+  cursor: pointer;
+  color: white;
+  background: linear-gradient(to right ,#ff416c,#ff4b2b);
+  transition: all .4s;
 }
